Use multi instead of the while loop for creating seats
